# Eclipsed-Engine

./: .gitignore  CMakeLists.txt  Eclipse-Source.lnk  PackageAll.bat  README.md  build-game.bat  generate-project.bat  open.bat  run-build-game.bat
Assets/: scene.json  (+1 more)
Eclipse-Source/: CMakeLists.txt
Eclipse-Source/Assets/: CollisionLayers.json  inputmap.json  meta.json
Eclipse-Source/Assets/Icons/: EclipseMoon.psd
Eclipse-Source/Assets/Scenes/: CoolScene.scene  Map1.scene  SimonTestScene.scene  SimonsScene.scene  TestScene.json  TestScene.scene
Eclipse-Source/Assets/Settings/: EngineSettings.json  editor.json
Eclipse-Source/Assets/Shaders/: DebugLinePixelShader.glsl  SelectedPixelSpriteShader.glsl  TextPixelShader.glsl  TextVertexShader.glsl
Eclipse-Source/Assets/Sprites/: spritesheet.json
Eclipse-Source/Assets/Sprites/ScissorSprite/: ScissorAnimation.json  Scissors.animation
Eclipse-Source/EngineAssets/: Icons.bundle  test.ini
Eclipse-Source/EngineAssets/Default/Materials/: Default_2D_Material.mat
Eclipse-Source/EngineAssets/Default/Shaders/: DefaultSprite.vglsl  ScreenSpaceSpriteVertexShader.glsl  Text.pglsl  Text.vglsl
Eclipse-Source/EngineAssets/Editor/: MoveGizmo.psd  RotationGizmo.psd
Eclipse-Source/EngineAssets/Editor/Layouts/: Default.ini  Testing.ini
Eclipse-Source/Local/: EngineSettings.json  project
Eclipse-Source/Settings/: EngineSettings.json  GameSettings.json  Packager.evb  coolio.json  editor.json
Eclipse-Source/Source/CMakeSources/: AssetEngine-Sources.cmake  AudioEngine-Sources.cmake  CoreEngine-Sources.cmake  EclipsedRuntime-Sources.cmake  EntityEngine-Sources.cmake  GraphicsEngine-Sources.cmake  InputEngine-Sources.cmake  NetworkEngine-Sources.cmake  PhysicsEngine-Sources.cmake
Eclipse-Source/Source/Editor/: CMakeLists.txt  pch.h
Eclipse-Source/Source/Editor/Editor/: DragAndDrop.cpp  DragAndDrop.h  Editor.cpp  Editor.h  EditorApplication.cpp  EditorApplication.h  EditorContext.cpp  EditorContext.h  EditorRuntime.cpp  EditorRuntime.h  EditorUIManager.cpp  EditorUIManager.h  FileWatcher.cpp  FileWatcher.h  ResourceRegistry.h  TextureIconManager.cpp  TextureIconManager.h  WindowManager.cpp  WindowManager.h
Eclipse-Source/Source/Engine/EclipsedEngine/: CMakeLists.txt  pch.h
Eclipse-Source/Source/Engine/EclipsedRuntime/: CMakeLists.txt
Eclipse-Source/Source/EngineModules/AudioEngine/: CMakeLists.txt
Eclipse-Source/Source/EngineModules/CoreEngine/: CMakeLists.txt  pch.h
Eclipse-Source/Source/EngineModules/GraphicsEngine/: CMakeLists.txt
Eclipse-Source/Source/Engines/AssetEngine/: CMakeLists.txt  pch.h
Eclipse-Source/Source/Engines/AudioEngine/: CMakeLists.txt
Eclipse-Source/Source/Engines/CoreEngine/: CMakeLists.txt  pch.h
Eclipse-Source/Source/Engines/EntityEngine/: CMakeLists.txt  pch.h
Eclipse-Source/Source/Engines/GraphicsEngine/: CMakeLists.txt  ShaderCompiler.h  Sprite.h  TextManager.cpp  TextManager.h  TextSprite.cpp  TextSprite.h  pch.h
Eclipse-Source/Source/Engines/InputEngine/: CMakeLists.txt
Eclipse-Source/Source/Engines/PhysicsEngine/: CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsEngineSettings.h  pch.h
Eclipse-Source/Source/Game/: CMakeLists.txt  pch.h
Eclipse-Source/Source/Game/Game/: Game.cpp  Game.h
Eclipse-Source/Source/Launcher/: CMakeLists.txt  main.cpp
Eclipse-Source/Source/Tools/AssetExporter/: CMakeLists - Copy.txt  CMakeLists.txt  main - Copy.cpp  main.cpp
Eclipse-Source/Source/Utilities/: CMakeLists.txt  pch.h
Eclipse-Source/Source/Utilities/Utilities/: DebugLogBuffer.h  DebugLogger.cpp  DebugLogger.h  ErrorCodes.h  ForceInclude.h  MainSingleton.h  Random.h  Settings.h  SettingsManager.h  Singeton.hpp  TemporarySettingsSingleton.cpp  TemporarySettingsSingleton.h  defines.h
Eclipse-Source/Tools/CMake/: common.cmake
Eclipse-Source/Tools/Libs/FreeType/: freetype.lib  freetyped.lib
Eclipse-Source/Tools/Libs/box2d/: box2d-d.lib  box2d.lib
Eclipse-Source/Tools/Template Project/: .gitignore  CMakeLists.txt  Forcelink.cpp  Forcelink.h
Source/Core/: CMakeLists.txt
Source/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  ErrorCodes.h  main.cpp  pch.h
Source/Editor/Editor/: ComponentRegistry.cpp  ComponentRegistry.h  DebugLogger.h  DragAndDrop.h  Editor.cpp  Editor.h  WindowManager.cpp  WindowManager.h  WindowRegistry.cpp  WindowRegistry.h  main.cpp
Source/Editor/Editor/ImGui/: ImGui_Impl.h
Source/Editor/Editor/Reflection/: ReflectedVariable.cpp  ReflectedVariable.h  Reflection.cpp  Reflection.h  ReflectionDefines.h
Source/Editor/Editor/Windows/: AssetWindow.cpp  AssetWindow.h  ConsoleWindow.cpp  ConsoleWindow.h  DebugWindow.cpp  DebugWindow.h  GameWindow.cpp  GameWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  InputEditorWindow.cpp  InputEditorWindow.h  InspectorWindow.cpp  InspectorWindow.h  RenderingWindow.h  SceneWindow.cpp  SceneWindow.h  SettingsWindow.cpp  SettingsWindow.h  Window.cpp  Window.h  WindowBase.h  Window_Template.h
Source/Editor/ImGui/: ImGui_Impl.h
Source/Engines/CoreEngine/: CMakeLists.txt  TemporarySettingsSingleton.h  pch.h
Source/Engines/CoreEngine/AssetManagement/: ResourceList.h  ResourceList.inl  ResourcePointer.h  ResourcePointer.inl  Resources.cpp  Resources.inl
Source/Engines/CoreEngine/CoreEngine/: Engine.cpp  Engine.h  GameObject.cpp  TemporarySettingsSingleton.h
Source/Engines/CoreEngine/ECS/: ComponentManager.h
Source/Engines/GraphicsEngine/: CMakeLists.txt  ComandList.h  CommandList.cpp  CommandList.h  RenderCommand.h  ShaderCompiler.cpp  ShaderCompiler.h  Sprite.cpp  Sprite.h
Source/Engines/GraphicsEngine/OpenGL/: DebugDrawer.cpp  DebugDrawer.h  OpenGLGraphicsAPI.cpp  OpenGLGraphicsAPI.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  UniformVariableManager.cpp  UniformVariableManager.h
Source/Engines/PhysicsEngine/: CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.h  PhysicsEngineSettings.h
Source/Game/: CMakeLists.txt  main.cpp
Source/Game/Game/: Game.cpp  Game.h
Source/PlatformIntegration/: CMakeLists.txt
Source/PlatformIntegration/PlatformIntegration/: IntegrationManager.cpp  IntegrationManager.h
(+1189 files in other folders)
