cmake_minimum_required(VERSION 3.19.2)

# file(READ "${CMAKE_SOURCE_DIR}/Settings/EngineSettings.json" GAME_NAME_FILE)
# string(JSON GameJSONName GET "${GAME_NAME_FILE}" GameName)
set(GAME_NAME "Eclipsed Engine")

set(LAUNCHER_ROOT "${CMAKE_CURRENT_SOURCE_DIR}")

file(GLOB_RECURSE LAUNCHER_SOURCES
    "${LAUNCHER_ROOT}/main.cpp"
)

add_executable(Launcher "${LAUNCHER_ROOT}/main.cpp")

target_include_directories(Launcher PUBLIC ${CMAKE_SOURCE_DIR}/Source/Launcher/)

target_link_libraries(Launcher PRIVATE EclipsedEngine)

set_target_properties(Launcher PROPERTIES
RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Bin"
RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/Bin"
RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/Bin"
OUTPUT_NAME "${GAME_NAME}_$<CONFIG>"
)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/Bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/Bin")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Bin")


set_target_properties(Launcher PROPERTIES UNITY_BUILD ON UNITY_BUILD_BATCH_SIZE 50)